--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>  
         </nav>
         <div class="wrapper">
-        <h3 class="title2">Stopwatch</h3>
+        <p class="stopw"> <i class="fas fa-stopwatch fa-5x"></i></p>
           <div class="main_content">
             
            <div>
