my ip html css completed

--- a/timer.html
+++ b/timer.html
@@ -19,6 +19,7 @@
 
             <li><a href="index.html">Stopwatch</a> </li>  
            <li><a href="timer.html">Timer</a></li>
+           <li><a href="myip.html">My IP</a></li>
            <li><a href="epoch.html">Epoch Converter</a></li>  
           <li><a href="translator.html">Translator</a></li>
         </ul>  
