--- a/translator.html
+++ b/translator.html
@@ -18,6 +18,7 @@
 
             <li><a href="index.html">Stopwatch</a> </li>  
            <li><a href="timer.html">Timer</a></li>
+           <li><a href="myip.html">My IP</a></li>
            <li><a href="epoch.html">Epoch Converter</a></li>  
           <li><a href="translator.html">Translator</a></li>
         </ul>  
@@ -31,12 +32,27 @@
       <div class="xx">
         <div class="box1">     
         <select name ="form" class="lang1">
-           <option>English</option> 
-           <option>Hindi</option>
-           <option>Spanish</option>
-           <option>Italian</option>
-           <option>French</option>
-           <option>Arabic</option>
+            <option>English</option> 
+            <option>Hindi</option>
+            <option>Spanish</option>
+            <option>Italian</option>
+            <option>French</option>
+            <option>Arabic</option>
+            <option>French</option>
+            <option>Gujarati</option>
+            <option>Greek</option>
+            <option>Indonesian</option>
+            <option>Japanese</option>
+            <option>Kannada</option>
+            <option>Korean</option>
+            <option>Latin</option>
+            <option>Malayalam</option>
+            <option>Marathi</option>
+            <option>Mongolian</option>
+            <option>Nepali</option>
+            <option>Tamil</option>
+            <option>Telugu</option>
+            <option>Urdu</option>
         </select>
     <div>  <textarea class="input" placeholder="Enter text" rows="7" ></textarea> </div>
        </div>
@@ -51,6 +67,22 @@
             <option>Italian</option>
             <option>French</option>
             <option>Arabic</option>
+            <option>French</option>
+            <option>Gujarati</option>
+            <option>Greek</option>
+            <option>Indonesian</option>
+            <option>Japanese</option>
+            <option>Kannada</option>
+            <option>Korean</option>
+            <option>Latin</option>
+            <option>Malayalam</option>
+            <option>Marathi</option>
+            <option>Mongolian</option>
+            <option>Nepali</option>
+            <option>Tamil</option>
+            <option>Telugu</option>
+            <option>Urdu</option>
+        </select>
         </select>
        <div> <textarea class="output" placeholder="Translation" rows="7" disabled="disabled"></textarea></div>
       
@@ -58,7 +90,8 @@
    
     </div>
  <div class="btn"><input type="button" value="Reset" class="reset_btn"></div>     
-     </div>
+      <hr>    
+</div>
  
       </form>
       
