--- a/myip.html
+++ b/myip.html
@@ -27,7 +27,7 @@
          <div class="ip_icon"><i class="fas fa-map-marker-alt fa-5x"></i></div>
          <div class="secondry">
          <div class="input_ip_box">
-          <p>IP Address:</p> 
+          <p>IP Address</p> 
             <textarea  id="ip_box" rows="5" ></textarea>
           
         </div>
