change in ip address file output modifying disabled

--- a/myip.html
+++ b/myip.html
@@ -28,7 +28,7 @@
          <div class="secondry">
          <div class="input_ip_box">
           <p>IP Address</p> 
-            <textarea  id="ip_box" rows="5" ></textarea>
+            <textarea  id="ip_box" rows="5" disabled="disabled" ></textarea>
           
         </div>
         
